# burn

./: .gitignore  .npmrc  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  landscape.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json
.github/workflows/: ci.yml  cli-build.yml  napi-build.yml  publish.yml  release-macos.yml  verify-publish.yml
apps/macos/: LICENSE  Package.swift  README.md  build.sh  release.sh
apps/macos/App/: AppIcon.icns  Info.plist
apps/macos/scripts/: generate-icon.swift  make-icon.sh
crates/burn-analyze/: Cargo.toml
crates/burn-analyze/src/: lib.rs
crates/burn-cli/: Cargo.toml
crates/burn-cli/src/: main.rs
crates/burn-ledger/: Cargo.toml
crates/burn-ledger/src/: lib.rs
crates/burn-mcp/: Cargo.toml
crates/burn-mcp/src/: lib.rs
crates/burn-reader/: Cargo.toml
crates/burn-reader/src/: lib.rs
crates/burn-sdk/: Cargo.toml
crates/burn-sdk-node/: Cargo.toml
crates/burn-sdk-node/src/: lib.rs
crates/burn-sdk/src/: lib.rs
crates/relayburn-analyze/: Cargo.toml
crates/relayburn-analyze/src/: claude_md.rs  compare.rs  compare_archive.rs  cost.rs  fidelity.rs  findings.rs  ghost_surface.rs  ghost_surface_inputs.rs  hotspots.rs  lib.rs  overhead.rs  patterns.rs  patterns_tests.rs  pricing.rs  provider.rs  provider_reattribution.rs  quality.rs  replacement_savings.rs  subagent_tree.rs  tool_call_patterns.rs  tool_output_bloat.rs
crates/relayburn-cli/: Cargo.toml
crates/relayburn-cli/src/: cli.rs  lib.rs  main.rs  selfupdate.rs
crates/relayburn-cli/src/commands/: compare.rs  flow.rs  hotspots.rs  ingest.rs  mcp_server.rs  mod.rs  overhead.rs  run.rs  sessions.rs  stamps.rs  state.rs  summary.rs  sync.rs  update.rs
crates/relayburn-cli/src/commands/hotspots/: human.rs  json.rs  mod.rs
crates/relayburn-cli/src/commands/summary/: human.rs  json.rs  mod.rs
crates/relayburn-cli/src/harnesses/: claude.rs  codex.rs  mod.rs  opencode.rs  pending_stamp.rs  registry.rs  test_env.rs
crates/relayburn-cli/src/render/: error.rs  format.rs  json.rs  logging.rs  mod.rs  progress.rs  prompt.rs  table.rs  ux.rs
crates/relayburn-cli/src/util/: home.rs  mod.rs  time.rs
crates/relayburn-cli/tests/: flow_svg.rs  golden.rs  smoke.rs
crates/relayburn-ingest/: Cargo.toml
crates/relayburn-ingest/src/: cursors.rs  gap.rs  ingest.rs  lib.rs  pending_stamps.rs  reingest.rs  walk.rs  watch_loop.rs
crates/relayburn-ingest/tests/: gap_warning_integration.rs  orchestration.rs  pending_stamps_compat.rs  watch_loop_integration.rs
crates/relayburn-ingest/tests/fixtures/: ts_codex_stamp.json
crates/relayburn-ledger/: Cargo.toml
crates/relayburn-ledger/src/: archive.rs  config.rs  content.rs  db.rs  error.rs  errors.rs  file_adapter.rs  fingerprint.rs  lib.rs  lock.rs  paths.rs  query.rs  reader.rs  schema.rs  sidecar.rs  stamp.rs  test_support.rs  tests.rs  writer.rs
crates/relayburn-reader/: Cargo.toml
crates/relayburn-reader/src/: classifier.rs  claude.rs  codex.rs  fidelity.rs  git.rs  hash.rs  lib.rs  opencode.rs  opencode_stream.rs  types.rs  user_turn.rs
crates/relayburn-reader/src/codex/: tests.rs
crates/relayburn-reader/src/opencode/: tests.rs
crates/relayburn-reader/src/opencode_stream/: tests.rs
crates/relayburn-sdk/: Cargo.toml
crates/relayburn-sdk-node/: Cargo.toml  build.rs
crates/relayburn-sdk-node/src/: lib.rs
crates/relayburn-sdk/data/: models.dev.json
crates/relayburn-sdk/src/: analyze.rs  export_verbs.rs  ingest.rs  ingest_verb.rs  ledger.rs  lib.rs  query_verbs.rs  reader.rs  stamp_verb.rs  util.rs
crates/relayburn-sdk/src/analyze/: claude_md.rs  compare.rs  compare_archive.rs  context_delta.rs  context_delta_tests.rs  cost.rs  fidelity.rs  findings.rs  flow_graph.rs  ghost_surface.rs  ghost_surface_inputs.rs  ghost_surface_tests.rs  hotspots.rs  hotspots_tests.rs  overhead.rs  patterns.rs  patterns_tests.rs  pricing.rs  provider.rs  provider_reattribution.rs  quality.rs  replacement_savings.rs  span_tree.rs  subagent_tree.rs  subagent_tree_tests.rs  tool_call_patterns.rs  tool_output_bloat.rs  tool_output_bloat_tests.rs  util.rs
crates/relayburn-sdk/src/analyze/ghost_surface/: adapters.rs
crates/relayburn-sdk/src/analyze/patterns/: compaction.rs  edits.rs  shell.rs  skills.rs  streaks.rs
crates/relayburn-sdk/src/ingest/: cursors.rs  fs_events.rs  gap.rs  gap_warning_tests.rs  ingest.rs  orchestration_tests.rs  pending_stamps.rs  pending_stamps_compat_tests.rs  reingest.rs  walk.rs  watch_loop.rs  watch_loop_tests.rs
crates/relayburn-sdk/src/ledger/: bootstrap.rs  config.rs  content.rs  db.rs  fingerprint.rs  paths.rs  query.rs  reader.rs  schema.rs  stamp.rs  tests.rs  writer.rs
crates/relayburn-sdk/src/query_verbs/: compare.rs  flow.rs  hotspots.rs  mod.rs  overhead.rs  sessions.rs  state.rs  summary.rs  tests.rs
crates/relayburn-sdk/src/query_verbs/summary/: compute.rs  mod.rs
crates/relayburn-sdk/src/reader/: classifier.rs  claude.rs  codex.rs  fidelity.rs  git.rs  hash.rs  inference.rs  opencode.rs  opencode_stream.rs  types.rs  user_turn.rs
crates/relayburn-sdk/src/reader/classifier/: bash_parse.rs  slash_triads.rs
crates/relayburn-sdk/src/reader/claude/: incremental.rs  parent_chain.rs  relationships.rs  span_tree.rs  subagents.rs  tests.rs  tool_results.rs
crates/relayburn-sdk/src/reader/codex/: incremental.rs  span_tree.rs  tests.rs
crates/relayburn-sdk/src/reader/opencode/: tests.rs
crates/relayburn-sdk/src/reader/opencode_stream/: tests.rs
crates/relayburn-sdk/src/util/: time.rs
crates/relayburn-sdk/tests/: integration.rs
memory/workspace/.relay/: state.json
scripts/: bench-summary.py  measure-user-turn-tokenizer.mjs  update-pricing.mjs
tests/fixtures/claude/: compact-boundary.jsonl  consecutive-failures.jsonl  cross-file-parent.jsonl  edit-revert.jsonl  explicit-line-relationships.jsonl  files-touched.jsonl  fork-branch-a.jsonl  fork-branch-b.jsonl  incomplete-then-complete.jsonl  interleaved-turns.jsonl  missing-output-tokens.jsonl  multi-block-turn.jsonl  nested-subagent.jsonl  original-session.jsonl  (+13 more)
(+123 files in other folders)
