[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "2.10.1"
edition = "2021"
rust-version = "1.94"
license = "MIT"
repository = "https://github.com/AgentWorkforce/burn"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util", "time"] }
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled"] }
memchr = "2"
