[package]
name = "burn-analyze"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Pricing, cost derivation, and comparison aggregator for relayburn."

[dependencies]
burn-reader = { workspace = true }
burn-ledger = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
