[package]
name = "burn-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Stdio MCP server exposing read-only relayburn ledger queries."

[dependencies]
burn-sdk = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
# rmcp = "0.x"  # MCP protocol crate; pinned in the burn-mcp port sub-issue.
