[package]
name = "relayburn-ingest"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Session-store discovery, parse-and-append orchestration, pending stamps, and watch loop (Rust port)."
publish = false

[dependencies]
relayburn-reader = { path = "../relayburn-reader" }
relayburn-ledger = { path = "../relayburn-ledger" }
serde = { workspace = true }
serde_json = { workspace = true, features = ["preserve_order"] }
tokio = { workspace = true, features = ["sync"] }
thiserror = { workspace = true }
anyhow = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time", "sync", "test-util"] }
