[package]
name = "relayburn-ledger"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "SQLite-backed ledger (events + stamps) and FTS5 content store for relayburn (Rust port)."
publish = false

[dependencies]
relayburn-reader = { path = "../relayburn-reader" }
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
sha2 = "0.10"
hex = "0.4"
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
