[package]
name = "relayburn-reader"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Session-log parsers and activity classifier for relayburn (Rust port)."
publish = false

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
hex = "0.4"
regex = "1"
phf = { version = "0.11", features = ["macros"] }

[dev-dependencies]
tempfile = "3"
